<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/headLinerLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/resultField"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textSize="18sp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/operationField"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textSize="18sp"
        android:layout_height="wrap_content" />

    </LinearLayout>
    <EditText
        android:id="@+id/numberField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result"
        android:inputType="phone" />
    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnC"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:onClick="onOperationClick"
            android:text="@string/btnC" />
        <Button
            android:id="@+id/btnChangeOfSign"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/btnChangeOfSign"
            android:textSize="24sp"
            android:onClick="onOperationClick"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:onClick="onOperationClick"
            android:text="@string/btnPercent"/>

        <Button
            android:id="@+id/btnDivision"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="#FF9800"
            android:text="@string/btnDivision"
            android:onClick="onOperationClick"
            android:textSize="24sp" />
</LinearLayout>

<LinearLayout
        android:id="@+id/secondLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstLayout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/btn7"
            android:onClick="onNumberClick"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/btn8"
            android:onClick="onNumberClick"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/btn9"
            android:onClick="onNumberClick"
            android:textSize="24sp" />

    <Button
        android:id="@+id/x"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:backgroundTint="#FF9800"
        android:text="@string/btnX"
        android:onClick="onOperationClick"
        android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondLayout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/btn4"
            android:onClick="onNumberClick"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/btn5"
            android:onClick="onNumberClick"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/btn6"
            android:onClick="onNumberClick"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="#FF9800"
            android:text="@string/btnMinus"
            android:onClick="onOperationClick"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourthLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/thirdLayout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/btn1"
            android:onClick="onNumberClick"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/btn2"
            android:onClick="onNumberClick"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/btn3"
            android:onClick="onNumberClick"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="#FF9800"
            android:text="@string/btnPlus"
            android:onClick="onOperationClick"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fourthLayout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn0"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="10"
            android:text="@string/btn0"
            android:onClick="onNumberClick"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnPoint"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="0.01"
            android:text="@string/btnPoint"
            android:onClick="onOperationClick"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnEqually"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="0.01"
            android:backgroundTint="#FF9800"
            android:text="@string/btnEqually"
            android:onClick="onOperationClick"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>
</RelativeLayout>